ePortfolio 2.3/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Educational_Status__c</fullName>
        <label>Educational Status</label>
        <picklist>
            <picklistValues>
                <fullName>enrolled in High School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>enrolled in College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>in a Training Program/Apprenticeship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>not currently enrolled</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Employment_Status__c</fullName>
        <label>Employment Status</label>
        <picklist>
            <picklistValues>
                <fullName>Full Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unemployed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Highest_Education__c</fullName>
        <label>Highest Education</label>
        <picklist>
            <picklistValues>
                <fullName>K-8th Grade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-3 years of High School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 years of High School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High School Diploma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Certification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Some College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate&apos;s Degree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bachelor&apos;s Degree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master&apos;s Degree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PhD Degree</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LPLink__c</fullName>
        <description>(deprecated) stores link to Learner Profile</description>
        <label>zz_LPLink</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Reg_General_Info_Completed__c</fullName>
        <description>date learner completed bio/demo info page in registration process</description>
        <label>Reg General Info Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reg_Picture_Completed__c</fullName>
        <description>the date/time the learner uploaded a photo in the registration process</description>
        <label>Reg Picture Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reg_T_C_Completed__c</fullName>
        <description>the date/time the learner agreed to the T&amp;C in the registration process</description>
        <label>Reg T&amp;C Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Registration_Completed__c</fullName>
        <label>Registration Completed</label>
        <type>DateTime</type>
    </fields>
</CustomObject>